<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/환율계산"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_send_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/송금국가"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_receive_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_send_country"
            tools:text="수취 국가: 한국(KRW)" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_receive_country"
            tools:text="환율 : 1198원" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exchange_rate"
            tools:text="조회시간 : 2022-02-17 12:42" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_send_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/송금액"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_send_money"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_send_money"
            app:layout_constraintEnd_toStartOf="@+id/tv_usd"
            app:layout_constraintStart_toEndOf="@+id/tv_send_money"
            app:layout_constraintTop_toTopOf="@+id/tv_send_money" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/USD"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calculate_receive_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/수취금액_계산"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_send_money" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_receive_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_calculate_receive_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_send_money"
            tools:text="수취금액은 113,004.96 KRW입니다" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_receive_country"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/수취국가_변경"
            app:layout_constraintBottom_toBottomOf="@+id/tv_receive_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toEndOf="@+id/tv_receive_country"
            app:layout_constraintTop_toTopOf="@+id/tv_receive_country" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>